[package]
name = "variant-ssl"
version = "0.17.25"
license = "Apache-2.0"
description = "Bindings for OpenSSL variants such as BoringSSL / AWS-LC / Tongsuo"
repository = "https://github.com/VEY-OSS/rust-variant-ssl"
readme = "README.md"
keywords = ["crypto", "tls", "ssl", "dtls"]
categories = ["cryptography", "api-bindings"]
edition = "2021"
rust-version = "1.85.0"

[features]
default = ['runtime-libclang']
vendored = ['ffi/vendored']
tongsuo = ['ffi/tongsuo']
boringssl = ["ffi/boringssl"]
aws-lc = ["ffi/aws-lc"]
aws-lc-fips = ["ffi/aws-lc-fips"]
bindgen = ['ffi/bindgen']
runtime-libclang = ['ffi/runtime-libclang']
static-libclang = ['ffi/static-libclang']

[dependencies]
bitflags = "2.2.1"
cfg-if = "1.0"
foreign-types = "0.3.1"
libc = "0.2"
once_cell = "1.5.2"

openssl-macros = { version = "0.1.1" }
ffi = { package = "variant-ssl-sys", version = "0.17.25", path = "../openssl-sys" }

[dev-dependencies]
hex = "0.4"
